@@ -36,6 +36,8 @@ package org.jcoderz.commons;
 import java.io.Serializable;
 import java.util.List;
 import java.util.Set;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 
 /**
@@ -64,7 +66,9 @@ public class BaseRuntimeException
       extends RuntimeException
       implements Loggable
 {
-   static final long serialVersionUID = 2L;
+   private static final long serialVersionUID = 2L;
+   private static final String CLASSNAME = BaseRuntimeException.class.getName();
+   private static final Logger LOGGER = Logger.getLogger(CLASSNAME);
 
    /** The loggable implementation. */
    private final LoggableImpl mLoggable;
@@ -78,6 +82,7 @@ public class BaseRuntimeException
    {
       super(messageInfo.getSymbol());
       mLoggable = new LoggableImpl(this, messageInfo);
+      logCreation();
    }
 
    /**
@@ -90,6 +95,7 @@ public class BaseRuntimeException
    {
       super(messageInfo.getSymbol(), cause);
       mLoggable = new LoggableImpl(this, messageInfo, cause);
+      logCreation();
    }
 
    /** {@inheritDoc} */
@@ -189,9 +195,25 @@ public class BaseRuntimeException
    {
        return mLoggable.toString();
    }
-   
+
    LoggableImpl getExceptionImpl ()
    {
       return mLoggable;
+   }
+
+   private void logCreation ()
+   {
+       if (LOGGER.isLoggable(
+           RteLogMessage.RuntimeExceptionCreated.LOG_LEVEL))
+       {
+           final LogEvent logEvent
+               = new LogEvent(RteLogMessage.RUNTIME_EXCEPTION_CREATED, this);
+           RteLogMessage.ExceptionCreated.addParameters(
+               logEvent, mLoggable.getLogMessageInfo().getSymbol(),
+               mLoggable.getMessage());
+           LOGGER.logp(logEvent.getLogMessageInfo().getLogLevel(),
+               logEvent.getSourceClass(), logEvent.getSourceMethod(),
+               logEvent.getMessage(), logEvent);
+       }
    }
 }
